# AmazomQ-mcp

./: README.md
AmzonQ-mcp/amazon-q-postgresql-mcp-server/: Cargo.toml  README.md
AmzonQ-mcp/amazon-q-postgresql-mcp-server/src/: main.rs  operator.rs
