[package]
name = "postgresql_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
#rmcp = { path = "../rmcp" } 
rmcp = { version = "0.1.5", features = ["transport-io"] }
#schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = "0.3"
schemars = "0.8"
